--- a/css/coupon.css
+++ b/css/coupon.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+/* 쿠폰 섹션 스타일 */
 .coupon-section {
   display: block;
   position: relative;
@@ -7,14 +8,16 @@
   margin: 0 auto;
   padding-top: 40px;
 }
+
 .coupon-container {
   width: 100%;
 }
+
 .coupon-list {
   display: flex;
 }
 
-/* 호버했을때  */
+/* 쿠폰 아이템 스타일 */
 .coupon-item {
   position: relative;
   display: block;
@@ -46,7 +49,33 @@
 .coupon-item:hover .overlay {
   opacity: 1; /* 마우스를 올렸을 때 글씨가 보이도록 */
 }
-/* 반응형 */
+
+/* 쿠폰 알림 스타일 */
+.coupon-alert {
+  position: fixed; /* 고정 위치 */
+  top: 50%; /* 화면 중앙 위치 */
+  left: 50%; /* 화면 중앙 위치 */
+  transform: translate(-50%, -50%); /* 중앙 정렬을 위한 변환 */
+  background-color: #f8f9fa; /* 배경색 */
+  border: 1px solid #dee2e6; /* 테두리 */
+  border-radius: 5px; /* 둥근 모서리 */
+  padding: 20px; /* 안쪽 여백 */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+  z-index: 1000; /* 다른 요소 위에 표시 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+}
+.coupon-alert.fade-in {
+  opacity: 1; /* 보일 때의 불투명도 */
+  visibility: visible; /* 가시성 설정 */
+}
+
+.coupon-alert.fade-out {
+  opacity: 0; /* 사라질 때의 불투명도 */
+  visibility: hidden; /* 가시성 숨기기 */
+}
+
+
+/* 반응형 스타일 */
 @media (max-width: 1000px) {
   .coupon-list > a > img {
     padding-left: 2%;
@@ -65,17 +94,13 @@
     padding-left: 2%;
     padding-bottom: 10px;
   }
-
 }
 @media (max-width: 500px) {
-
-
   .coupon-list > a > img {
-width: 100%;
-  
-}
+    width: 100%;
+  }
   .coupon-item .overlay {
-display: block;
-font-size: 16px;
-}
+    display: block;
+    font-size: 16px;
+  }
 }
