--- a/css/video.css
+++ b/css/video.css
@@ -67,6 +67,15 @@
 
 }
 
+@media (max-width: 650px){
+  .swVideo video{
+    width: 100%;
+    height: auto;
+    min-height: 350px;
+    object-fit: cover;
+  }
+}
+
   
 /* 라인배너 */
 
