--- a/css/review.css
+++ b/css/review.css
@@ -81,8 +81,8 @@
   text-decoration: none;
   color: #333;
   text-shadow: 0 0 6px #ccc ;
-  position: absolute;
-  left: 7%;
+  /* position: absolute;
+  left: 7%; */
 }
 
 .insta-link img{
